wither_derive/tests/fail/field-id-missing-serde-attrs.stderr
error: the ID field of wither::Models must have the attribute `#[serde(rename="_id", skip_serializing_if="Option::is_none")]`
 --> $DIR/field-id-missing-serde-attrs.rs:7:5
  |
7 |     id: Option<ObjectId>,
  |     ^^
